--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas == 1.2.3
-opencv-python == 4.5.3.56
+pandas==1.2.3
+opencv-python==4.5.3.56
 opencv-contrib-python==4.5.3.56
-numpy == 1.20.1
+numpy==1.20.1
+rich==10.3.0
