--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pandas==1.2.3
-opencv-python==4.5.3.56
-opencv-contrib-python==4.5.3.56
+matplotlib==3.4.1
 numpy==1.20.1
-rich==10.3.0
+opencv_contrib_python==4.5.3.56
+pandas==1.2.3
+rich==12.0.0
+scipy==1.7.1
